[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.0"
actix-http = "3.0" # เวอร์ชันที่ใช้
actix-service = "2" # เพิ่มบรรทัดนี้หากยังไม่มี
chrono = "0.4"

actix-multipart = "0.4.0"
actix-files = "0.6.0"
tokio = { version = "1", features = ["full"] }
bson = "2.0" 

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-cors = "0.6"
futures = "0.3.28"
futures-util = "0.3"  # เพิ่ม futures-util สำหรับการจัดการ async
bcrypt = "0.12"
jsonwebtoken = "8"  # สำหรับการทำงานกับ JWT

[dependencies.mongodb]
version = "3.1.0"